# pytorchTensorRT

./: README.md  WORKSPACE  noxfile.py  pyproject.toml  setup.py  versions.yml
.circleci/: config.yml
.github/scripts/: run_cpp_linter.py  run_py_linter.py
.github/workflows/: build-wheels-linux.yml
core/conversion/converters/impl/: select.cpp
core/lowering/passes/: exception_elimination.cpp
docsrc/: index.rst
docsrc/contributors/: fx_converters.rst
examples/dynamo/: README.rst  dynamo_compile_resnet_example.py  dynamo_compile_transformers_example.py  dynamo_module_level_acceleration.py
examples/fx/: hugging_face_torchdynamo_example.py  lower_example.py  lower_example_aten.py  quantized_resnet_test.py  torchdynamo_example.py
examples/int8/training/vgg16/: finetune_qat.py  main.py
packaging/: pre_build_script.sh
py/: requirements.txt  setup.py
py/ci/: build_whl.sh
py/torch_tensorrt/: _Device.py  _Input.py  __init__.py  _compile.py  ptq.py
py/torch_tensorrt/dynamo/: _TorchTensorRTModule.py  __init__.py  compile.py  test_utils.py
py/torch_tensorrt/dynamo/backend/: backends.py  conversion.py  utils.py
py/torch_tensorrt/dynamo/backend/lowering/: _partition.py  _pre_aot_lowering.py
py/torch_tensorrt/dynamo/backend/lowering/substitutions/: einsum.py  maxpool1d.py
py/torch_tensorrt/dynamo/backend/test/: test_backend_compiler.py  test_decompositions.py  test_partitioning.py  test_pre_aot_lowering.py  test_specialized_models.py  utils.py
py/torch_tensorrt/dynamo/conversion/: aten_ops_converters.py  converter_utils.py  trt_interpreter.py
py/torch_tensorrt/dynamo/conversion/impl/: __init__.py  cast.py  evaluators.py
py/torch_tensorrt/dynamo/fx_ts_compat/: fx2trt.py  input_tensor_spec.py
py/torch_tensorrt/dynamo/fx_ts_compat/passes/: lower_pass_manager_builder.py  pass_utils.py
py/torch_tensorrt/dynamo/fx_ts_compat/tools/: common_fx2trt.py  trt_minimizer.py
py/torch_tensorrt/fx/: converter_registry.py  diagnostics.py  fx2trt.py  input_tensor_spec.py  observer.py  trt_module.py  utils.py
py/torch_tensorrt/fx/converters/: acc_ops_converters.py  converter_utils.py  nn_ops_converters.py  transformation.py
py/torch_tensorrt/fx/converters/impl/: convolution.py
py/torch_tensorrt/fx/passes/: lower_basic_pass.py  lower_basic_pass_aten.py  lower_pass_manager_builder.py  pass_utils.py
py/torch_tensorrt/fx/test/converters/acc_op/: test_reshape.py  test_type_as.py
py/torch_tensorrt/fx/test/passes/: test_fix_clamp_numerical_limits_to_fp16.py  test_graph_opts.py  test_remove_duplicate_output_args.py  test_setitem_trt.py
py/torch_tensorrt/fx/test/quant/: test_quant_trt.py
py/torch_tensorrt/fx/test/tracer/: test_acc_tracer.py
py/torch_tensorrt/fx/test/trt_lower/: test_fx2trt_lower.py  trt_splitter_test.py
py/torch_tensorrt/fx/tools/: common_fx2trt.py  engine_layer_visualize.py  model_packager.py  timing_cache_utils.py  trt_minimizer.py  trt_splitter.py
py/torch_tensorrt/fx/tracer/acc_tracer/: acc_normalizer.py  acc_ops.py  acc_shape_prop.py  acc_tracer.py  acc_utils.py
py/torch_tensorrt/fx/tracer/dispatch_tracer/: tracer.py
py/torch_tensorrt/ts/: _compile_spec.py  _compiler.py  ts_input.py
tests/modules/: custom_models.py  hub.py  requirements.txt
tests/py/: model_test_case.py
tests/py/api/: test_classes.py  test_collections.py  utils.py
tests/py/dynamo/backend/: test_backend_compiler.py
tests/py/dynamo/converters/: test_casts.py  test_evaluators.py
tests/py/models/: custom_models.py
tests/py/ptq/: test_ptq_dataloader_calibrator.py  test_ptq_to_backend.py  test_ptq_trt_calibrator.py
tests/py/qat/: test_qat_trt_accuracy.py
toolchains/ci_workspaces/: WORKSPACE.x86_64.release.rhel  WORKSPACE.x86_64.release.ubuntu
tools/linter/: cpplint.py  cpplint_diff.py  pylint.py  pylint_diff.py  utils.py
tools/perf/: custom_models.py  hub.py  perf_run.py  utils.py
